add translate for muntil lang

--- a/src/app/shared/components/files-manager/files-manager.component.scss
+++ b/src/app/shared/components/files-manager/files-manager.component.scss
@@ -172,7 +172,7 @@
     padding: 0 14px;
     height: 45px;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
     button {
       margin-left: 8px;
