--- a/src/app/shared/layouts/header/header.component.html
+++ b/src/app/shared/layouts/header/header.component.html
@@ -6,6 +6,13 @@
     <span nz-icon nzType="download" nzTheme="outline"></span>
   </div>
 
+<!--  <span>{{'greeting'| translate}}</span>-->
+  <div class="switch-language">
+    <nz-select [(ngModel)]="lang" (ngModelChange)="changeLang($event)">
+      <nz-option nzValue="vi" nzLabel="Tiếng việt"></nz-option>
+      <nz-option nzValue="en" nzLabel="English"></nz-option>
+    </nz-select>
+  </div>
 
   <span nz-tooltip [nzTooltipTitle]="titleTemplate" nzTooltipPlacement="left" [nzTooltipColor]="'#3c4043e6'">
     <button *ngIf="!linkAvatar"
