--- a/src/app/pages/e-learning-membership/components/config/config-detail/config-detail.component.html
+++ b/src/app/pages/e-learning-membership/components/config/config-detail/config-detail.component.html
@@ -97,62 +97,63 @@
             Thêm nhóm quyền lợi
           </button>
 
-          <nz-table class="benefit-table" [nzData]="benefitList" [nzFrontPagination]="false" [nzTemplateMode]="benefitList.length > 0">
+          <nz-table class="benefit-table" [nzData]="benefitList" [nzFrontPagination]="false"
+                    [nzTemplateMode]="benefitList.length > 0">
             <thead>
-              <tr>
-                <th nzAlign="center" nzWidth="50%">Quyền lợi dành cho bạn</th>
-                <th nzAlign="center" *ngFor="let policy of policyList">{{policy.name}}</th>
-                <th nzWidth="10%"></th>
-              </tr>
+            <tr>
+              <th nzAlign="center" nzWidth="50%">Quyền lợi dành cho bạn</th>
+              <th nzAlign="center" *ngFor="let policy of policyList">{{ policy.name }}</th>
+              <th nzWidth="10%"></th>
+            </tr>
             </thead>
             <tbody>
-              <ng-container *ngFor="let benefitObj of benefitList; index as i">
-                <tr style="background: #E6E4ED">
-                  <td >
-                    <input nz-input class="group-name" placeholder="Tên nhóm quyền lợi"
-                           [(ngModel)]="benefitObj.name" [ngModelOptions]="{standalone: true}">
-                  </td>
-                  <td nzAlign="center" *ngFor="let policy of policyList"></td>
-                  <td nzAlign="center">
-                    <button nz-button nzType="primary"
-                            nz-tooltip nzTooltipTitle="Thêm quyền lợi"
-                            (click)="addBenefit(benefitObj.benefits, i)"
-                            style="margin-right: 5px">
-                      <span nz-icon nzType="plus"></span>
-                    </button>
-                    <button nz-button nz-tooltip nzTooltipTitle="Xóa nhóm quyền lợi"
-                            (click)="removeGroupBenefit(i)"
-                            style="margin-left: 5px" class="delete-btn">
-                      <span nz-icon nzType="delete"></span>
-                    </button>
-                  </td>
-                </tr>
-                <tr *ngFor="let benefit of benefitObj.benefits; index as iB" class="editable-row">
-                  <td>
-                    <div class="editable-cell" [hidden]="editId === benefit.id" (click)="startEdit(benefit.id)">
-                      {{ benefit.title }}
-                    </div>
-                    <textarea
-                        nz-input [(ngModel)]="benefit.title" [ngModelOptions]="{standalone: true}"
-                        [hidden]="editId !== benefit.id" type="text" (blur)="stopEdit()"
-                        placeholder="Tên quyền lợi"
-                    ></textarea>
-                  </td>
+            <ng-container *ngFor="let benefitObj of benefitList; index as i">
+              <tr style="background: #E6E4ED">
+                <td>
+                  <input nz-input class="group-name" placeholder="Tên nhóm quyền lợi"
+                         [(ngModel)]="benefitObj.name" [ngModelOptions]="{standalone: true}">
+                </td>
+                <td nzAlign="center" *ngFor="let policy of policyList"></td>
+                <td nzAlign="center">
+                  <button nz-button nzType="primary"
+                          nz-tooltip nzTooltipTitle="Thêm quyền lợi"
+                          (click)="addBenefit(benefitObj.benefits, i)"
+                          style="margin-right: 5px">
+                    <span nz-icon nzType="plus"></span>
+                  </button>
+                  <button nz-button nz-tooltip nzTooltipTitle="Xóa nhóm quyền lợi"
+                          (click)="removeGroupBenefit(i)"
+                          style="margin-left: 5px" class="delete-btn">
+                    <span nz-icon nzType="delete"></span>
+                  </button>
+                </td>
+              </tr>
+              <tr *ngFor="let benefit of benefitObj.benefits; index as iB" class="editable-row">
+                <td>
+                  <div class="editable-cell" [hidden]="editId === benefit.id" (click)="startEdit(benefit.id)">
+                    {{ benefit.title }}
+                  </div>
+                  <textarea
+                    nz-input [(ngModel)]="benefit.title" [ngModelOptions]="{standalone: true}"
+                    [hidden]="editId !== benefit.id" type="text" (blur)="stopEdit()"
+                    placeholder="Tên quyền lợi"
+                  ></textarea>
+                </td>
 
-                  <td nzAlign="center" *ngFor="let policy of policyList">
-                    <input type="checkbox"
-                           (click)="onChecked(policy.id, benefit.memberPolicyIds)"
-                           [checked]="updateSingleChecked(policy.id, benefit.memberPolicyIds)" >
-                  </td>
+                <td nzAlign="center" *ngFor="let policy of policyList">
+                  <input type="checkbox"
+                         (click)="onChecked(policy.id, benefit.memberPolicyIds)"
+                         [checked]="updateSingleChecked(policy.id, benefit.memberPolicyIds)">
+                </td>
 
-                  <td nzAlign="center">
-                    <button nz-button nz-tooltip nzTooltipTitle="Xóa quyền lợi"
-                            (click)="removeBenefit(i, iB)" class="delete-btn">
-                      <span nz-icon nzType="delete"></span>
-                    </button>
-                  </td>
-                </tr>
-              </ng-container>
+                <td nzAlign="center">
+                  <button nz-button nz-tooltip nzTooltipTitle="Xóa quyền lợi"
+                          (click)="removeBenefit(i, iB)" class="delete-btn">
+                    <span nz-icon nzType="delete"></span>
+                  </button>
+                </td>
+              </tr>
+            </ng-container>
             </tbody>
           </nz-table>
         </div>
@@ -161,7 +162,7 @@
   </div>
   <div nz-col [nzSpan]="4">
     <div class="btn-panel">
-      <button class="btn primary" nz-button (click)="edit()">
+      <button class="btn primary" nz-button [nzLoading]="loading" (click)="edit()">
         Lưu
       </button>
       <button class="btn" nz-button (click)="navigateBack()">Hủy</button>
