hotfix: add logic for membership op

--- a/src/app/pages/e-learning-membership/components/create-membership/create-membership.component.html
+++ b/src/app/pages/e-learning-membership/components/create-membership/create-membership.component.html
@@ -106,7 +106,7 @@
           </div>
         </div>
 
-        <div nz-col [nzSpan]="24" *ngIf="membershipLevel > lowestMemLv">
+        <div nz-col [nzSpan]="24" *ngIf="membershipLevel > lowestMemLv && membershipOpList.length > 0">
           <div class="content-block" nz-row [nzGutter]=[16,8]>
             <div nz-col [nzSpan]="24" class="content-block-title">Chiết khấu khi nâng gói</div>
             <nz-divider class="mt-10"></nz-divider>
