--- a/src/app/pages/report/funnel-report/report-funnel-course/report-funnel-course.component.html
+++ b/src/app/pages/report/funnel-report/report-funnel-course/report-funnel-course.component.html
@@ -63,7 +63,9 @@
         nzShowPagination="false" (nzQueryParams)="onQueryParamsChange($event)">
         <thead style="overflow-y: hidden;">
             <tr>
-                <th [nzLeft]="true" nzWidth="50px" nzAlign="center">STT</th>
+                <th [nzLeft]="true" nzWidth="50px" nzAlign="center">
+                    STT
+                </th>
                 <th nzWidth="160px" [nzLeft]="true" nzAlign="center">Tên khóa học</th>
                 <th nzWidth="160px" [nzLeft]="true" nzAlign="center">Tên lớp học</th>
                 <th nzWidth="180px" nzColumnKey="totalAdsAmount" [nzSortFn]="true" nzAlign="center">Số tiền Ads</th>
