--- a/src/app/shared/components/menu-item/menu-item.component.html
+++ b/src/app/shared/components/menu-item/menu-item.component.html
@@ -1,9 +1,9 @@
 <ng-container *ngFor="let item of menuData" >
-  <li *ngIf="item.children" nz-submenu nzTitle={{item.name}} nzIcon="{{item.icon}}">
+  <li *ngIf="item.children" nz-submenu [nzTitle]="item.name | translate" nzIcon="{{item.icon}}">
     <app-menu-item [menuData]="item.children"></app-menu-item>
   </li>
   <li *ngIf="!item.children" nz-menu-item nzMatchRouter (click)="navigate(item.link)">
-    {{item.name}}
+    {{item.name | translate}}
   </li>
 </ng-container>
 
