--- a/src/app/pages/forum/components/config/forum-config/forum-config.component.html
+++ b/src/app/pages/forum/components/config/forum-config/forum-config.component.html
@@ -40,7 +40,7 @@
 
         <ng-template appCell let-data>
           <span class="custom-action" (click)="edit(data)"
-                nz-tooltip nzTooltipTitle="Chỉnh sửa video giới thiệu">
+                nz-tooltip nzTooltipTitle="Chỉnh sửa cấu hình">
             <span nz-icon nzType="edit" nzTheme="outline" class="custom-icon"></span>
           </span>
         </ng-template>
