--- a/src/app/pages/forum/components/sub-forum/sub-forum-list/sub-forum-list.component.html
+++ b/src/app/pages/forum/components/sub-forum/sub-forum-list/sub-forum-list.component.html
@@ -19,8 +19,9 @@
     >
       <table-column [dataType]="COL_DATA_TYPE.SELECTION" fixColumn="left"></table-column>
       <table-column header="STT" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
-      <table-column header="Tên cộng đồng" key="communityName" [width]="'200px'"></table-column>
-      <table-column header="Danh mục" key="name" [width]="'200px'"></table-column>
+      <table-column header="Cộng đồng lớn" key="communityName" [width]="'200px'"></table-column>
+      <table-column header="Tên cộng đồng" key="name" [width]="'200px'"></table-column>
+      <table-column header="Danh mục" key="communityCategoryName" [width]="'200px'"></table-column>
       <table-column header="Trạng thái" key="status" [width]="'200px'">
         <ng-template appCell let-data>
           <span class="text-valid" *ngIf="data.status">Kích hoạt</span>
@@ -35,7 +36,7 @@
 
         <ng-template appCell let-data>
           <span class="custom-action" (click)="edit(data)"
-                nz-tooltip nzTooltipTitle="Chỉnh sửa video giới thiệu">
+                nz-tooltip nzTooltipTitle="Chỉnh sửa cộng đồng">
             <span nz-icon nzType="edit" nzTheme="outline" class="custom-icon"></span>
           </span>
         </ng-template>
